--- a/app/src/main/res/layout/submit_fragment.xml
+++ b/app/src/main/res/layout/submit_fragment.xml
@@ -6,7 +6,9 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.MainFragment">
+        tools:context=".ui.main.SubmitFragment"
+        android:screenOrientation="portrait"
+>
 
     <EditText
             android:layout_width="0dp"
@@ -28,14 +30,6 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="36sp"
-            app:layout_constraintBottom_toTopOf="@+id/getButton" android:layout_margin="8dp"/>
-    <Button
-            android:text="Get"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/getButton" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_margin="8dp"
-            android:textSize="36sp"/>
+            android:layout_margin="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
