--- a/app/src/main/res/layout/submit_fragment.xml
+++ b/app/src/main/res/layout/submit_fragment.xml
@@ -13,17 +13,19 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:inputType="textPersonName"
-            android:text="Name"
+            android:inputType="textMultiLine"
             android:ems="10"
             android:id="@+id/messageEditText" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/submitButton" android:layout_margin="8dp" android:autofillHints="yes"/>
+            app:layout_constraintBottom_toTopOf="@+id/submitButton" android:layout_margin="8dp" android:autofillHints="yes">
+    <requestFocus/>
+    </EditText>
+
     <Button
-            android:text="Submit"
+            android:text="@string/float_"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/submitButton"
