changed back and added tutorial

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,5 +30,8 @@
             android:layout_marginBottom="72dp"
             android:layout_marginLeft="48dp"
             android:layout_marginStart="48dp"/>
+    <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/dummy"/>
 
 </FrameLayout>
