--- a/app/src/main/res/layout/submit_fragment.xml
+++ b/app/src/main/res/layout/submit_fragment.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.SubmitFragment"
         android:screenOrientation="portrait"
+        android:background="@drawable/paper"
 >
 
     <EditText
@@ -20,8 +21,9 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/submitButton" android:layout_margin="8dp" android:autofillHints="yes">
-    <requestFocus/>
+            app:layout_constraintBottom_toTopOf="@+id/submitButton" android:layout_margin="8dp"
+            android:autofillHints="yes">
+        <requestFocus/>
     </EditText>
 
     <Button
